--- a/style.css
+++ b/style.css
@@ -28,9 +28,9 @@ input[type="submit"] {
     padding-top: 60px;
     background-color: #ececec;
 }
-
 .film {
     padding: 10px;
+    list-style-type: none;
 }
 .white {
     background-color: #ececec;
