--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ form {
     background-color: #319bbb;
     position: fixed;
     width: 100%;
+    z-index: 9999;
 } form p {
     margin-right: 10px;
 } form select#type-select {
@@ -31,7 +32,37 @@ input[type="submit"] {
 .film {
     padding: 10px;
     list-style-type: none;
+} .films div.meta, .films div.stats-numbers-row, 
+.films div.titlebar, .films div.content-txt {
+    text-align: left;
+    width: 50%;
+    margin: auto;
+    justify-content: center;
+    margin-bottom: 20px;
 }
+.films div.meta {
+    margin-top: 20px;
+}
+
+div.entity-card-list {
+    width: 100%;
+} div.entity-card-list div {
+    width: 65%;
+    margin: auto;
+    justify-content: center;
+}
+figure.thumbnail {
+    width: 25%;
+    position: absolute;
+    margin-top: 15px;
+}
+.meta {
+    margin: 10px auto 5px auto;
+}
+.ovw-synopsis {
+    margin: 5px auto 10px auto;
+}
+
 .white {
     background-color: #ececec;
 }
