--- a/style.css
+++ b/style.css
@@ -70,9 +70,14 @@ figure.thumbnail {
     background-color: #919191;
 }
 
+.title {
+    padding: 80px 0 20px 0;
+}
+
 footer {
     padding: 20px 0;
     background-color: #000;
     color: #fff;
     text-align: center;
+    margin-top: 20px;
 }
